--- a/comparisons.html
+++ b/comparisons.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Visualization Dashboard</title>
+  <title>Visualization Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  <!-- Navigation Section -->
+  <!-- NavBar from Bootstrap -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
+      <a class="navbar-brand" style="background-color:  #7edad5;" href="index.html">Latitude</a>
       <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,6 @@
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
           </li>
-
         </ul>
       </div>
     </nav>
@@ -69,14 +68,12 @@
                 </a>
               </div>
             </div>
-
             <div class="row">
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Cloudiness</div>
                 <a href="./WebVisualizations/cloudiness.html">
                   <img class="panel" src="./assets/images/Fig3.png" alt="Cloudiness Graph">
                 </a>
-
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Wind Speed</div>
