--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Visualization Dashboard</title>
+  <title>Visualization Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-
   <!--CSS Link-->
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-
 </head>
 
 <body>
-  <!-- Navigation Bar Section from Bootstrap-->
+  <!-- NavBar from Bootstrap -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
+      <a class="navbar-brand" style="background-color: #7edad5;" href="index.html">Latitude</a>
       <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -43,7 +40,6 @@
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
           </li>
-
         </ul>
       </div>
     </nav>
@@ -71,8 +67,6 @@
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
-
-
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
@@ -86,7 +80,6 @@
                 </a>
               </div>
             </div>
-
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="./WebVisualizations/cloudiness.html">
@@ -98,12 +91,8 @@
                   <img class="panel" src="./assets/images/Fig4.png" alt="Wind Speed Graph">
                 </a>
               </div>
-
-
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
@@ -120,6 +109,5 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-
 </body>
 </html>
