--- a/WebVisualizations/cloudiness.html
+++ b/WebVisualizations/cloudiness.html
@@ -53,9 +53,8 @@
           <h3 class="title">Cloudiness</h3>
           <hr>
           <img src="../assets/images/Fig3.png" alt="Cloudines Graph">
-          <p>Cloudiness does not show a strong correlation to latitude. The visualization shows a great variety of
-            cloudiness percentages at different latitudes. Therefore, we cannot conclude that there is a conclusive
-            pattern between cloudiness and latitude.</p>
+          <p>The image about Cloudiness show that theres is not correlation with the Latitude.
+            There are points about cloudiness in all the Latitude scales.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
