--- a/WebVisualizations/humidity.html
+++ b/WebVisualizations/humidity.html
@@ -53,9 +53,9 @@
           <h3 class="title">Humidity</h3>
           <hr>
           <img src="../assets/images/Fig2.png" alt="Humidity Graph">
-          <p>Humidity does not show a strong correlation to latitude. The visualization shows a great variety of
-            humidity percentages at different latitudes. Therefore, we cannot conclude that there is a conclusive
-            pattern between humidity and latitude.</p>
+            <p>
+              The humidity points do not show a strong correlation with latitude.
+              Looks like there is no pattern, there are a general variety of humidity data..</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
