--- a/WebVisualizations/max_temperature.html
+++ b/WebVisualizations/max_temperature.html
@@ -53,13 +53,13 @@
           <h3 class="title">Max Temperature</h3>
           <hr>
           <img src="../assets/images/Fig1.png" alt="Max Temperature Graph">
-          <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude).
-            More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the
-            year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this
-            data was gathered.</p>
+          <p>For the moment the weather becomes it is most warm as its is close to the equator.
+            For weather information when we take the max. temperatures we have to take note 
+            about the dates of the data as all weather vary during the year.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
+
         <!-- Right Box -->
         <div class="box">
           <h5 class="title">Visualizations</h5>
