--- a/WebVisualizations/wind_speed.html
+++ b/WebVisualizations/wind_speed.html
@@ -53,9 +53,10 @@
           <h3 class="title">Wind Speed</h3>
           <hr>
           <img src="../assets/images/Fig4.png" alt="Wind Speed Graph">
-          <p>Wind speed appears to slightly increase as we move away from the equator. However, to conclusively
-            describe a pattern, we would need to go beyond the range in data to reach cities at closer to the poles.
-            Only then can we have a sample large to confirm the pattern.</p>
+          <p>
+            About the correlation of latitude with wind speed, some points appear that minimally
+            manage to notice an increase in certain latitudes, perhaps a larger study could
+            determine or confirm a correlation.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
