--- a/WebVisualizations/max_temperature.html
+++ b/WebVisualizations/max_temperature.html
@@ -53,9 +53,11 @@
           <h3 class="title">Max Temperature</h3>
           <hr>
           <img src="../assets/images/Fig1.png" alt="Max Temperature Graph">
-          <p>For the moment the weather becomes it is most warm as its is close to the equator.
-            For weather information when we take the max. temperatures we have to take note 
-            about the dates of the data as all weather vary during the year.</p>
+          <p>For some range of Latitude is clear the weather be more warm ans show 
+             some correlation.
+             To obtain meteorological information when we take maximum temperatures, 
+             we must look at the data and know when they were obtained since we see 
+             more and more extreme climates.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
