--- a/WebVisualizations/max_temperature.html
+++ b/WebVisualizations/max_temperature.html
@@ -53,11 +53,12 @@
           <h3 class="title">Max Temperature</h3>
           <hr>
           <img src="../assets/images/Fig1.png" alt="Max Temperature Graph">
-          <p>For some range of Latitude is clear the weather be more warm ans show 
-             some correlation.
-             To obtain meteorological information when we take maximum temperatures, 
-             we must look at the data and know when they were obtained since we see 
-             more and more extreme climates.</p>
+          <p>
+            For some ranges of Latitude it is clear that the weather will be warmer and a
+            small correlation can be seen.
+            In order to obtain a better conclusion to obtain information, we must look at
+            the data and know when it was obtained since we are increasingly seeing more 
+            extreme climates.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
